Bug 368587 - Minimal Shade Selector can't be selected/changed
Summary: Minimal Shade Selector can't be selected/changed
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 3.0.1
Platform: macOS (DMG) All
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2016-09-11 11:12 UTC by Roel
Modified: 2019-04-24 03:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roel 2016-09-11 11:12:25 UTC
On OSX (iMac 5k and Macbook Air 2014) when trying to select/change the Minimal Shade Selectors it won't update after a downarrow click and selecting a different setting.. the old values stay where they are. Changing Line Count, Height and Patches per Line works without problems; only the pulldown color ramp menu's won't.
(After a lot of tries It very rarely did update, but 99% of the time not at all)

Checked on Windows and there it works as expected.

Reproducible: Always

Steps to Reproduce:
1. Go Into Advanced Color Selector Docker / Shade Selector Tab
2. Type to Minimal
3. Display Gradient/Color Patches
4. Select first of 3 selection dropdownboxes
5. Select a Profile or change a profile
6. Click away from the dropdown to close it
7. Observe that Nothing has changed

Actual Results:  
Al changes are ignored

Expected Results:  
obvious
Comment 1 Halla Rempt 2016-09-15 13:21:22 UTC
Hi Roel,

I can confirm the issue. This happens on all platforms.
Comment 2 Halla Rempt 2016-09-19 13:51:51 UTC
Regression since 3.0
Comment 3 Sven Langkamp 2018-10-07 10:45:37 UTC
I tested this and was able to select every profile. Does the bug still happen?
Comment 4 Andrew Crouthamel 2018-10-27 04:10:19 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information as soon as possible and set the bug status as REPORTED. Due to regular bug tracker maintenance, if the bug is still in NEEDSINFO status with no change in 30 days, the bug will be closed as RESOLVED > WORKSFORME due to lack of needed information.

For more information about our bug triaging procedures please read the wiki located here: https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please set the bug status as REPORTED so that the KDE team knows that the bug is ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Roel 2018-10-27 09:00:00 UTC
This behaviour/bug is still there.. there is no way to change the shade selectors
Comment 6 Halla Rempt 2018-10-27 09:58:16 UTC
Reopening. I still need to check again on macOS.
Comment 7 vanyossi 2018-10-31 06:52:38 UTC
Still happens in OSX on Krita 4.1.3
Comment 8 vanyossi 2019-04-24 03:16:16 UTC
Git commit f29d0220658a149727f472f3d84ddac3bb12bb9f by Ivan Yossi.
Committed on 24/04/2019 at 03:16.
Pushed by ivany into branch 'master'.

Fix unable to set minimal shade selection

On some systems the selection would not trigger a
configuration change. also added a preview for the
spinbox generated shade select.

M  +1    -0    plugins/dockers/advancedcolorselector/kis_shade_selector_line_combo_box.cpp
M  +11   -10   plugins/dockers/advancedcolorselector/kis_shade_selector_line_combo_box_popup.cpp
M  +25   -2    plugins/dockers/advancedcolorselector/kis_shade_selector_line_editor.cpp
M  +8    -1    plugins/dockers/advancedcolorselector/kis_shade_selector_line_editor.h

https://invent.kde.org/kde/krita/commit/f29d0220658a149727f472f3d84ddac3bb12bb9f