Fix unable to set minimal shade selection

On some systems the selection would not trigger a
configuration change. also added a preview for the
spinbox generated shade select.

BUG:368587